--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-3">
-  <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search movie by name..." [(ngModel)]="query">
+<div class="mt-3">
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Movie name..." [(ngModel)]="query">
     <div class="input-group-append">
       <button class="btn btn-outline-primary" type="button" (click)="onSearchMovies()">Search</button>
     </div>
