Remove Search from component and add at navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<app-nav [title]="title"></app-nav>
+<app-nav [title]="title" [searchMovies]="searchMovies"></app-nav>
 
 <div class="container">
-    <app-search [searchMovies]="searchMovies"></app-search>
     <app-home [movies]="movies"></app-home>
 </div>
 
