Rename home component to movie and organize folders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav [title]="title" [searchMovies]="searchMovies"></app-nav>
 
 <div class="container">
-    <app-home [movies]="movies"></app-home>
+    <app-movies [movies]="movies"></app-movies>
 </div>
 
 <router-outlet></router-outlet>
