--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,22 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a routerLink="/"><span class="navbar-brand mb-0 h1">{{title}}</span></a>
-  <div class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="query">
-    <button class="btn btn-primary my-2 my-sm-0" type="submit" (click)="onSearchMovies()">Search</button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="">About</a>
+      </li>
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="query">
+      <button class="btn btn-primary my-2 my-sm-0" type="submit" (click)="onSearchMovies()">Search</button>
+    </div>
   </div>
+
 </nav>
