Add Home Component

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,7 +1,13 @@
-<div class="container mt-4 ">
+<div class="container mt-5 ">
     <div class="row hs full">
+        <div class="col-sm-3 ">
+            <img [src]="swipe_left" alt="" class="item">
+        </div>
         <div class="col-sm-3" *ngFor="let movie of movies">
             <a routerLink="/movie/{{ movie.imdbID }}"><img src="{{ movie.Poster}}" alt="{{ movie.Title}}" class="item"></a>
+        </div>
+        <div class="col-sm-3">
+            <img [src]="swipe_right" alt="" class="item">
         </div>
     </div>
 </div>
