--- a/src/app/movies/movie/movie.component.html
+++ b/src/app/movies/movie/movie.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 mb-5">
   <div class="row">
-    <div class="col-sm-12 col-md-4 col-lg-4 text-center">
+    <div class="col-sm-12 col-md-4 col-lg-4 text-center mt-5">
       <img src="{{movie.Poster}}" alt="{{movie.Title}}" class="img-thumbnail">
     </div>
     <div class="col">
