Add font awewome

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="query">
+      <input class="form-control mr-sm-2" type="search" placeholder="Movie name..." aria-label="Search" [(ngModel)]="query">
       <button class="btn btn-primary my-2 my-sm-0" type="submit" (click)="onSearchMovies()">Search</button>
     </div>
   </div>
