--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid mt-5">
-  <div class="container">
-    <h1 class="display-4">Movies database</h1>
+  <div class="container text-center">
+    <h1 class="display-4">Movies database!</h1>
     <p class="lead">Platform to obtain movie information. All content on the site are provided by OMDB Api.</p>
   </div>
 </div>
