Add Film Icon to Logo

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a routerLink="/"><span class="navbar-brand mb-0 h1">{{title}}</span></a>
+    <fa-icon [icon]="faFilm" class="mr-2"></fa-icon><a routerLink="/"><span class="navbar-brand mb-0 h1">{{title}}</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
